// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatabaseForm /> matches snapshot 1`] = `
<div
  className="iap-db-connection-section"
>
  <form
    className="iap-db-form"
    onSubmit={[Function]}
  >
    <Field
      label="Database type"
    >
      <Select
        disabled={false}
        errorMessage=""
        name="type"
        onChange={[Function]}
        placeholder="Select Database Type"
        value="mongodb"
      >
        <SelectOption
          active={false}
          onClick={[Function]}
          title="Bolt DB"
          value="boltdb"
        />
        <SelectOption
          active={false}
          onClick={[Function]}
          title="Mongo DB"
          value="mongodb"
        />
        <SelectOption
          active={false}
          onClick={[Function]}
          title="Dynamo DB"
          value="dynamodb"
        />
      </Select>
    </Field>
    <Field
      label="Name"
    >
      <Input
        Icon={null}
        autoComplete="off"
        disabled={false}
        errorMessage=""
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="e.g. identifo"
        type="text"
        value="database"
      />
    </Field>
    <Field
      label="Endpoint"
    >
      <Input
        Icon={null}
        disabled={false}
        errorMessage=""
        name="endpoint"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="e.g. localhost:27017"
        type="text"
        value="localhost:27017"
      />
    </Field>
    <footer
      className="iap-db-form__footer"
    >
      <Button
        Icon={[Function]}
        disabled={false}
        error={false}
        iconClassName=""
        onClick={null}
        stretch={false}
        transparent={false}
        type="submit"
      >
        Save changes
      </Button>
      <Button
        Icon={null}
        disabled={false}
        error={false}
        iconClassName=""
        onClick={[MockFunction]}
        stretch={false}
        transparent={true}
        type="button"
      >
        Cancel
      </Button>
    </footer>
  </form>
</div>
`;

exports[`<DatabaseForm /> matches snapshot when error 1`] = `
<div
  className="iap-db-connection-section"
>
  <form
    className="iap-db-form"
    onSubmit={[Function]}
  >
    <FormErrorMessage
      error={[Error: error message]}
    />
    <Field
      label="Database type"
    >
      <Select
        disabled={false}
        errorMessage=""
        name="type"
        onChange={[Function]}
        placeholder="Select Database Type"
        value="mongodb"
      >
        <SelectOption
          active={false}
          onClick={[Function]}
          title="Bolt DB"
          value="boltdb"
        />
        <SelectOption
          active={false}
          onClick={[Function]}
          title="Mongo DB"
          value="mongodb"
        />
        <SelectOption
          active={false}
          onClick={[Function]}
          title="Dynamo DB"
          value="dynamodb"
        />
      </Select>
    </Field>
    <Field
      label="Name"
    >
      <Input
        Icon={null}
        autoComplete="off"
        disabled={false}
        errorMessage=""
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="e.g. identifo"
        type="text"
        value="database"
      />
    </Field>
    <Field
      label="Endpoint"
    >
      <Input
        Icon={null}
        disabled={false}
        errorMessage=""
        name="endpoint"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="e.g. localhost:27017"
        type="text"
        value="localhost:27017"
      />
    </Field>
    <footer
      className="iap-db-form__footer"
    >
      <Button
        Icon={[Function]}
        disabled={false}
        error={true}
        iconClassName=""
        onClick={null}
        stretch={false}
        transparent={false}
        type="submit"
      >
        Save changes
      </Button>
      <Button
        Icon={null}
        disabled={false}
        error={false}
        iconClassName=""
        onClick={[MockFunction]}
        stretch={false}
        transparent={true}
        type="button"
      >
        Cancel
      </Button>
    </footer>
  </form>
</div>
`;

exports[`<DatabaseForm /> matches snapshot when posting 1`] = `
<div
  className="iap-db-connection-section"
>
  <form
    className="iap-db-form"
    onSubmit={[Function]}
  >
    <Field
      label="Database type"
    >
      <Select
        disabled={true}
        errorMessage=""
        name="type"
        onChange={[Function]}
        placeholder="Select Database Type"
        value="mongodb"
      >
        <SelectOption
          active={false}
          onClick={[Function]}
          title="Bolt DB"
          value="boltdb"
        />
        <SelectOption
          active={false}
          onClick={[Function]}
          title="Mongo DB"
          value="mongodb"
        />
        <SelectOption
          active={false}
          onClick={[Function]}
          title="Dynamo DB"
          value="dynamodb"
        />
      </Select>
    </Field>
    <Field
      label="Name"
    >
      <Input
        Icon={null}
        autoComplete="off"
        disabled={true}
        errorMessage=""
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="e.g. identifo"
        type="text"
        value="database"
      />
    </Field>
    <Field
      label="Endpoint"
    >
      <Input
        Icon={null}
        disabled={true}
        errorMessage=""
        name="endpoint"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="e.g. localhost:27017"
        type="text"
        value="localhost:27017"
      />
    </Field>
    <footer
      className="iap-db-form__footer"
    >
      <Button
        Icon={[Function]}
        disabled={true}
        error={false}
        iconClassName=""
        onClick={null}
        stretch={false}
        transparent={false}
        type="submit"
      >
        Save changes
      </Button>
      <Button
        Icon={null}
        disabled={true}
        error={false}
        iconClassName=""
        onClick={[MockFunction]}
        stretch={false}
        transparent={true}
        type="button"
      >
        Cancel
      </Button>
    </footer>
  </form>
</div>
`;

exports[`<DatabaseForm /> matches snapshot when type is dynamodb 1`] = `
<div
  className="iap-db-connection-section"
>
  <form
    className="iap-db-form"
    onSubmit={[Function]}
  >
    <Field
      label="Database type"
    >
      <Select
        disabled={false}
        errorMessage=""
        name="type"
        onChange={[Function]}
        placeholder="Select Database Type"
        value="dynamodb"
      >
        <SelectOption
          active={false}
          onClick={[Function]}
          title="Bolt DB"
          value="boltdb"
        />
        <SelectOption
          active={false}
          onClick={[Function]}
          title="Mongo DB"
          value="mongodb"
        />
        <SelectOption
          active={false}
          onClick={[Function]}
          title="Dynamo DB"
          value="dynamodb"
        />
      </Select>
    </Field>
    <Field
      label="Region"
    >
      <Input
        Icon={null}
        disabled={false}
        errorMessage=""
        name="region"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="e.g. ap-northeast-3"
        type="text"
        value=""
      />
    </Field>
    <Field
      label="Endpoint"
    >
      <Input
        Icon={null}
        disabled={false}
        errorMessage=""
        name="endpoint"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="e.g. localhost:27017"
        type="text"
        value="localhost:27017"
      />
    </Field>
    <footer
      className="iap-db-form__footer"
    >
      <Button
        Icon={[Function]}
        disabled={false}
        error={false}
        iconClassName=""
        onClick={null}
        stretch={false}
        transparent={false}
        type="submit"
      >
        Save changes
      </Button>
      <Button
        Icon={null}
        disabled={false}
        error={false}
        iconClassName=""
        onClick={[MockFunction]}
        stretch={false}
        transparent={true}
        type="button"
      >
        Cancel
      </Button>
    </footer>
  </form>
</div>
`;

exports[`<DatabaseForm /> matches snapshot when type is mongodb 1`] = `
<div
  className="iap-db-connection-section"
>
  <form
    className="iap-db-form"
    onSubmit={[Function]}
  >
    <Field
      label="Database type"
    >
      <Select
        disabled={false}
        errorMessage=""
        name="type"
        onChange={[Function]}
        placeholder="Select Database Type"
        value="mongodb"
      >
        <SelectOption
          active={false}
          onClick={[Function]}
          title="Bolt DB"
          value="boltdb"
        />
        <SelectOption
          active={false}
          onClick={[Function]}
          title="Mongo DB"
          value="mongodb"
        />
        <SelectOption
          active={false}
          onClick={[Function]}
          title="Dynamo DB"
          value="dynamodb"
        />
      </Select>
    </Field>
    <Field
      label="Name"
    >
      <Input
        Icon={null}
        autoComplete="off"
        disabled={false}
        errorMessage=""
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="e.g. identifo"
        type="text"
        value="database"
      />
    </Field>
    <Field
      label="Endpoint"
    >
      <Input
        Icon={null}
        disabled={false}
        errorMessage=""
        name="endpoint"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="e.g. localhost:27017"
        type="text"
        value="localhost:27017"
      />
    </Field>
    <footer
      className="iap-db-form__footer"
    >
      <Button
        Icon={[Function]}
        disabled={false}
        error={false}
        iconClassName=""
        onClick={null}
        stretch={false}
        transparent={false}
        type="submit"
      >
        Save changes
      </Button>
      <Button
        Icon={null}
        disabled={false}
        error={false}
        iconClassName=""
        onClick={[MockFunction]}
        stretch={false}
        transparent={true}
        type="button"
      >
        Cancel
      </Button>
    </footer>
  </form>
</div>
`;
